# numpy-notes

./: README.md  pyproject.toml
notes/: 01-getting-started.ipynb  02-a-few-useful-funcs.ipynb  03-turn-image-to-np-array.ipynb
