[tool.poetry]
name = "numpy-notes"
version = "0.1.0"
description = "A jupyter notebook that shows how to use numpy"
authors = ["thisisjab <heythisisjab@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
notebook = "^7.0.4"
numpy = "^1.26.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
